--- a/manifest.yml
+++ b/manifest.yml
@@ -1,8 +1,10 @@
 applications:
 - path: .
-  memory: 256M
+  memory: 512M
   instances: 1
   domain: mybluemix.net
   name: strongbot
   host: strongbot
   disk_quota: 1024M
+  services:
+  - strong-conversation
